crates/tlang_parser/tests/snapshots/parser_if_let__simple_if_let_statement.snap
---
source: crates/tlang_parser/tests/parser_if_let.rs
expression: "parse! (indoc! {\"\n        if let x = 1 {\n            x\n        }\n    \"})"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 10,
        kind: IfElse(IfElseExpression(
          condition: Expr(
            id: 6,
            kind: Let(Pat(
              id: 4,
              kind: Identifier(Ident(
                name: "x",
                span: Span(
                  start: 7,
                  end: 8,
                  start_lc: LineColumn(
                    line: 0,
                    column: 7,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 8,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 7,
                end: 8,
                start_lc: LineColumn(
                  line: 0,
                  column: 7,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 8,
                ),
              ),
            ), Expr(
              id: 5,
              kind: Literal(UnsignedInteger(1)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 11,
                end: 12,
                start_lc: LineColumn(
                  line: 0,
                  column: 11,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 12,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 0,
              end: 0,
              start_lc: LineColumn(
                line: 0,
                column: 0,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 0,
              ),
            ),
          ),
          then_branch: Block(
            id: 9,
            statements: [],
            expression: Some(Expr(
              id: 8,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "x",
                    span: Span(
                      start: 19,
                      end: 20,
                      start_lc: LineColumn(
                        line: 1,
                        column: 5,
                      ),
                      end_lc: LineColumn(
                        line: 1,
                        column: 6,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 19,
                  end: 20,
                  start_lc: LineColumn(
                    line: 1,
                    column: 5,
                  ),
                  end_lc: LineColumn(
                    line: 1,
                    column: 6,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 19,
                end: 20,
                start_lc: LineColumn(
                  line: 1,
                  column: 5,
                ),
                end_lc: LineColumn(
                  line: 1,
                  column: 6,
                ),
              ),
            )),
            span: Span(
              start: 13,
              end: 22,
              start_lc: LineColumn(
                line: 0,
                column: 13,
              ),
              end_lc: LineColumn(
                line: 2,
                column: 2,
              ),
            ),
          ),
          else_branches: [],
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 22,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 2,
            column: 2,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 22,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 2,
          column: 2,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 22,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 2,
      column: 2,
    ),
  ),
)
